fix: layout issue for portfolio page
- Grid alignment issues and how to handle content that doesn’t fit properly.
- Managing spacing between cards on different screen sizes with gap properties.

--- a/src/components/Sections/StatsSection.module.scss
+++ b/src/components/Sections/StatsSection.module.scss
@@ -1,17 +1,16 @@
+@import '@/styles/variables';
+
 .statsContainer {
     display: flex;
-    justify-content: space-around;
-    align-items: center; // 讓行高自動填充剩餘空間 
-    gap: 50px;
-    margin-top: 60px;
-    align-items: center; // 垂直居中 
-    flex: 1; // 讓 .subcontainer 撐滿父級容器 .container */
+    flex-direction: column; // 垂直排列
+    align-items: center; // 水平居中
+    gap: 10vh; // 調整間距，避免元素擁擠
+    flex: 1; // 確保容器內的內容填滿整個可用空間
 }
 
 .stats {
     display: flex;
     align-items: flex-start;
-
 }
 
 .statsInView {
@@ -21,14 +20,14 @@
 
 .statsItem {
     display: flex;
-    align-items: flex-start;
     flex-direction: column;
+    align-items: flex-start;
     justify-content: flex-start;
     padding: 0px 30px;
 }
 
 .number {
-    font-size: var(--heading2);
+    font-size: var(--heading3);
     color: var(--error);
     margin-right: 20px;
     line-height: 1;
@@ -38,8 +37,8 @@
 }
 
 .label {
-    font-size: var(--heading3);
-    color: var(text-primary);
+    font-size: var(--subtitle);
+    color: var(--text-primary);
     margin-top: 24px;
     white-space: normal;
     word-wrap: break-word;
@@ -48,21 +47,44 @@
 }
 
 .separator {
-    mask: url('@/assets/portfolio/separator.svg') no-repeat center;
-    background-color: var(--text-primary); // 用來改變 SVG 顏色
-    width: 100px;
-    height: 100px;
-    margin: 0 20px;
+    display: none;
 }
 
-@media (max-width: 768px) {
-
+@media (min-width: $breakpoint-mobile) and (max-width: $breakpoint-tablet-minus-1) {
     .statsContainer {
-        flex-direction: column;
-        gap: 10vh;
+        flex-direction: row;
+        justify-content: space-around;
+        gap: 30px;
+        margin-top: 60px;
+    }
+
+    .label {
+        text-align: left;
+    }
+}
+
+@media (min-width: $breakpoint-tablet) {
+    .statsContainer {
+        flex-direction: row; // 水平排列
+        justify-content: space-around; // 平均分配空間
+        gap: 50px; // 間距增大，適應大螢幕
+        margin-top: 60px; // 調整容器的上間距
     }
 
     .separator {
-        display: none;
+        display: block;
+        mask: url('@/assets/portfolio/separator.svg') no-repeat center;
+        background-color: var(--text-primary); // 用来改变 SVG 颜色
+        width: 100px;
+        height: 100px;
+        margin: 0 20px;
+    }
+
+    .number {
+        font-size: var(--heading2);
+    }
+
+    .label {
+        font-size: var(--heading3);
     }
 }
